Main Menu gears added Gears animation Fixed train bug Trains vary in speed Changed controller variable declaration Added options and rules to lobby Added IP option for join lobby

--- a/src/main/resources/views/layout_preferences.fxml
+++ b/src/main/resources/views/layout_preferences.fxml
@@ -10,6 +10,12 @@
     <TextField fx:id="nameField" alignment="CENTER" maxWidth="200.0" minHeight="25.0" minWidth="200.0" prefHeight="30.0"
                prefWidth="200.0"/>
     <fx:include source="layout_color_preference.fxml" fx:id="colorPreference"/>
+    <VBox fx:id="ipBox" alignment="CENTER" prefWidth="1080">
+        <Label alignment="CENTER" prefHeight="25.0" prefWidth="335.0" text="IP-address" fx:id="ipLabel"/>
+        <TextField fx:id="IPinput" alignment="CENTER" maxWidth="200.0" minHeight="25.0" minWidth="200.0"
+                   prefHeight="30.0"
+                   prefWidth="200.0"/>
+    </VBox>
     <HBox fx:id="buttons" prefWidth="1920" alignment="CENTER" spacing="20">
         <Label fx:id="backButton" text="Back" onMouseEntered="#entered" onMouseExited="#exited"/>
         <Label fx:id="createButton" text="Create lobby" onMouseEntered="#entered" onMouseExited="#exited"/>
