--- a/src/main/resources/views/layout_main_menu_front_images.fxml
+++ b/src/main/resources/views/layout_main_menu_front_images.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.image.*?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <Pane xmlns:fx="http://javafx.com/fxml"
       xmlns="http://javafx.com/javafx"
@@ -12,19 +13,21 @@
             <Image url="/images/mountains.png"/>
         </image>
     </ImageView>
-    <ImageView fx:id="train1" preserveRatio="true" layoutX="-1500" layoutY="370" fitWidth="300">
-        <image>
-            <Image url="/images/train_blue.png"/>
-        </image>
-    </ImageView>
-    <ImageView fx:id="train2" preserveRatio="true" layoutX="-1200" layoutY="370" fitWidth="300">
-        <image>
-            <Image url="/images/train_blue.png"/>
-        </image>
-    </ImageView>
-    <ImageView fx:id="train3" preserveRatio="true" layoutX="-900" layoutY="370" fitWidth="300">
-        <image>
-            <Image url="/images/train_blue.png"/>
-        </image>
-    </ImageView>
+    <HBox fx:id="trainsHBox" layoutX="-1000" layoutY="365">
+        <ImageView fx:id="train1" preserveRatio="true" fitWidth="300">
+            <image>
+                <Image url="/images/train_blue.png"/>
+            </image>
+        </ImageView>
+        <ImageView fx:id="train2" preserveRatio="true" fitWidth="300">
+            <image>
+                <Image url="/images/train_blue.png"/>
+            </image>
+        </ImageView>
+        <ImageView fx:id="train3" preserveRatio="true" fitWidth="300">
+            <image>
+                <Image url="/images/train_blue.png"/>
+            </image>
+        </ImageView>
+    </HBox>
 </Pane>
