layout route toegevoegd

--- a/src/main/resources/views/layout_playscreen.fxml
+++ b/src/main/resources/views/layout_playscreen.fxml
@@ -69,17 +69,23 @@
 </HBox>
 
     <HBox rotate="80" layoutX="715" layoutY="296" maxHeight="15" maxWidth="250" style="-fx-spacing: 3">
+    <HBox maxHeight="15" minHeight="10" minWidth="30" maxWidth="30"
+          style="-fx-background-color: green; -fx-border-color:black; -fx-border-width: 1; -fx-border-style: solid;">
+    </HBox>
+</HBox>
+
+    <HBox rotate="68" layoutX="240" layoutY="196" maxHeight="15" maxWidth="250" style="-fx-spacing: 3">
         <HBox maxHeight="15" minHeight="10" minWidth="30" maxWidth="30"
-              style="-fx-background-color: green; -fx-border-color:black; -fx-border-width: 1; -fx-border-style: solid;">
+              style="-fx-background-color: yellow; -fx-border-color:black; -fx-border-width: 1; -fx-border-style: solid;">
+        </HBox>
+        <HBox maxHeight="15" minHeight="10" minWidth="30" maxWidth="30"
+              style="-fx-background-color: yellow; -fx-border-color:black; -fx-border-width: 1; -fx-border-style: solid;">
         </HBox>
     </HBox>
 
-    <HBox rotate="67" layoutX="240" layoutY="195" maxHeight="15" maxWidth="250" style="-fx-spacing: 3">
+    <HBox rotate="123" layoutX="573" layoutY="320" maxHeight="15" maxWidth="250" style="-fx-spacing: 3">
         <HBox maxHeight="15" minHeight="10" minWidth="30" maxWidth="30"
-              style="-fx-background-color: yellow; -fx-border-color:black; -fx-border-width: 1; -fx-border-style: solid;">
-        </HBox>
-        <HBox maxHeight="15" minHeight="10" minWidth="30" maxWidth="30"
-              style="-fx-background-color: yellow; -fx-border-color:black; -fx-border-width: 1; -fx-border-style: solid;">
+              style="-fx-background-color: grey; -fx-border-color:black; -fx-border-width: 1; -fx-border-style: solid; -fx-border-radius:10 10 10 10; -fx-background-radius:10 10 10 10;">
         </HBox>
     </HBox>
 
