BuildRouteAction added RandomCardAction added Test for BuildRouteAction made Fixed snow appearing in the lobby
TODO : Enabling options menu inside the lobby

--- a/src/main/resources/views/layout_main_menu.fxml
+++ b/src/main/resources/views/layout_main_menu.fxml
@@ -52,6 +52,6 @@
     <fx:include source="layout_main_menu_options.fxml" fx:id="VBoxOption" alignment="BASELINE_CENTER" layoutY="1080"
                 layoutX="850"/>
     <fx:include source="layout_main_menu_front_images.fxml" fx:id="images" translateY="540"/>
-    <Pane fx:id="snowPaneFront" translateY="600"/>
+    <Pane fx:id="snowPaneFront" translateY="600" prefHeight="480"/>
 
 </Pane>
