Fixed wrong route (OSLO-KRISTIANSAND type from ANY to BLACK) Changed location in routes from TALINN to TALLINN (no longer conform ELoc) Added locations to the map Hover function for locations: border: enter to white, exit to orange Edited out the locations on the background

--- a/src/main/resources/views/layout_routes_map.fxml
+++ b/src/main/resources/views/layout_routes_map.fxml
@@ -14,5 +14,5 @@
             <Image url="/images/Background.png"/>
         </image>
     </ImageView>
-    <Pane fx:id="routes" prefWidth="1920" prefHeight="1080"/>
+    <Pane fx:id="mainPane" prefWidth="1920" prefHeight="1080"/>
 </Pane>
