--- a/src/main/resources/views/layout_routes_map.fxml
+++ b/src/main/resources/views/layout_routes_map.fxml
@@ -12,5 +12,7 @@
     <ImageView>
         <Image url="/images/Background.png"/>
     </ImageView>
+    <Pane onMouseMoved="#hideLocationInformation" prefWidth="1920" prefHeight="1080"/>
     <Pane fx:id="mainPane" prefWidth="1920" prefHeight="1080"/>
+    <Pane fx:id="informationPane" prefWidth="1920" prefHeight="1080"/>
 </Pane>
