--- a/src/main/resources/views/layout_main_menu_front_images.fxml
+++ b/src/main/resources/views/layout_main_menu_front_images.fxml
@@ -8,26 +8,18 @@
       fx:controller="client.ui.MainMenuFrontImagesController"
       prefHeight="400.0" prefWidth="600.0">
 
-    <ImageView fx:id="mountains" preserveRatio="true" layoutX="0" layoutY="0">
-        <image>
-            <Image url="/images/mountains.png"/>
-        </image>
+    <ImageView fx:id="mountains" preserveRatio="true">
+        <Image url="/images/mountains.png"/>
     </ImageView>
     <HBox fx:id="trainsHBox" layoutX="-1000" layoutY="365">
         <ImageView fx:id="train1" preserveRatio="true" fitWidth="300">
-            <image>
-                <Image url="/images/train_blue.png"/>
-            </image>
+            <Image url="/images/train_blue.png"/>
         </ImageView>
         <ImageView fx:id="train2" preserveRatio="true" fitWidth="300">
-            <image>
-                <Image url="/images/train_blue.png"/>
-            </image>
+            <Image url="/images/train_blue.png"/>
         </ImageView>
         <ImageView fx:id="train3" preserveRatio="true" fitWidth="300">
-            <image>
-                <Image url="/images/train_blue.png"/>
-            </image>
+            <Image url="/images/train_blue.png"/>
         </ImageView>
     </HBox>
 </Pane>
