--- a/src/main/resources/views/layout_color_preference.fxml
+++ b/src/main/resources/views/layout_color_preference.fxml
@@ -5,7 +5,8 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.shape.Rectangle?>
 <StackPane xmlns:fx="http://javafx.com/fxml/1" alignment="TOP_CENTER" maxHeight="80" maxWidth="300"
-           xmlns="http://javafx.com/javafx/8.0.121" fx:controller="client.ui.ColorPreferenceController"
+           xmlns="http://javafx.com/javafx/8.0.121"
+           fx:controller="client.ui.MainMenuControllers.ColorPreferenceController"
            onMouseEntered="#entered" onMouseExited="#exited">
     <Rectangle fx:id="colorPreferenceRectangle" height="80" width="300"/>
     <Label fx:id="colorPreferenceLabel" text="Pick a Color!" alignment="BASELINE_CENTER" prefHeight="80"
