--- a/src/main/resources/views/layout_lobby.fxml
+++ b/src/main/resources/views/layout_lobby.fxml
@@ -6,7 +6,7 @@
 <VBox
         xmlns:fx="http://javafx.com/fxml"
         xmlns="http://javafx.com/javafx"
-        fx:controller="client.ui.LobbyController"
+        fx:controller="client.ui.MainMenuControllers.LobbyController"
         prefHeight="1080.0" prefWidth="3020.0" alignment="CENTER"
         spacing="20" style="-fx-background-color: #DDD">
     <VBox fx:id="container" alignment="BASELINE_CENTER"/>
