--- a/src/main/resources/views/layout_routes_map.fxml
+++ b/src/main/resources/views/layout_routes_map.fxml
@@ -12,7 +12,7 @@
     <ImageView>
         <Image url="/images/Background.png"/>
     </ImageView>
-    <!--<Pane onMouseMoved="#onLocationHoverLeave" prefWidth="1920" prefHeight="1080"/>-->
     <Pane fx:id="mainPane" prefWidth="1920" prefHeight="1080"/>
     <Pane fx:id="informationPane" prefWidth="1920" prefHeight="1080"/>
+    <fx:include source="overlay_build_message.fxml" fx:id="route_costs" layoutY="1180" layoutX="150"/>
 </Pane>
