--- a/src/main/resources/views/layout_main_menu.fxml
+++ b/src/main/resources/views/layout_main_menu.fxml
@@ -5,10 +5,11 @@
 <?import javafx.scene.layout.*?>
 <Pane xmlns:fx="http://javafx.com/fxml/1" prefHeight="1080.0" prefWidth="3840.0"
       xmlns="http://javafx.com/javafx/8.0.121"
-      fx:controller="client.ui.MainMenuControllers.MainMenuController" fx:id="rootPane">
+      fx:controller="client.ui.MainMenuControllers.MainMenuController" fx:id="rootPane"
+>
 
     <Pane fx:id="snowPane"/>
-    <HBox fx:id="behindLogoAnimation" spacing="-40" scaleX="0.9" scaleY="0.9" layoutX="-80" layoutY="-60">
+    <HBox spacing="-40" scaleX="0.9" scaleY="0.9" layoutX="-80" layoutY="-60">
         <ImageView fx:id="gear1">
             <Image url="/images/gear.png"/>
         </ImageView>
@@ -19,20 +20,16 @@
             <Image url="/images/gear.png"/>
         </ImageView>
     </HBox>
+
     <VBox spacing="20" fx:id="VBoxMain" alignment="BASELINE_CENTER" layoutY="20" layoutX="50">
         <ImageView fitWidth="550" preserveRatio="true">
             <Image url="/images/logo.png"/>
         </ImageView>
-        <Label text="Play" fx:id="playLabel" onMouseEntered="#hoverEnter" onMouseExited="#hoverExit"
-               onMouseClicked="#openMenuSequence"/>
-        <Label text="Load" fx:id="loadLabel" onMouseEntered="#hoverEnter" onMouseExited="#hoverExit"
-               onMouseClicked="#openMenuSequence"/>
-        <Label text="Rules" fx:id="ruleLabel" onMouseEntered="#hoverEnter" onMouseExited="#hoverExit"
-               onMouseClicked="#openMenuSequence"/>
-        <Label text="Options" fx:id="optionLabel" onMouseEntered="#hoverEnter" onMouseExited="#hoverExit"
-               onMouseClicked="#openMenuSequence"/>
-        <Label text="Quit" fx:id="quitLabel" onMouseEntered="#hoverEnter" onMouseExited="#hoverExit"
-               onMouseClicked="#quitGame"/>
+        <Label styleClass="fancy-label" text="Play" fx:id="playLabel" onMouseClicked="#openMenuSequence"/>
+        <Label styleClass="fancy-label" text="Load" fx:id="loadLabel" onMouseClicked="#openMenuSequence"/>
+        <Label styleClass="fancy-label" text="Rules" fx:id="ruleLabel" onMouseClicked="#openMenuSequence"/>
+        <Label styleClass="fancy-label" text="Options" fx:id="optionLabel" onMouseClicked="#openMenuSequence"/>
+        <Label styleClass="fancy-label" text="Quit" fx:id="quitLabel" onMouseClicked="#quitGame"/>
     </VBox>
 
     <fx:include source="layout_main_menu_play.fxml" fx:id="VBoxPlay" alignment="BASELINE_CENTER" layoutY="1080"
@@ -43,7 +40,7 @@
                 prefHeight="600" layoutX="850"/>
     <fx:include source="layout_main_menu_options.fxml" fx:id="VBoxOption" alignment="BASELINE_CENTER" layoutY="1080"
                 layoutX="850"/>
-    <fx:include source="layout_main_menu_front_images.fxml" fx:id="images" translateY="540"/>
-    <Pane fx:id="snowPaneFront" translateY="600" prefHeight="480"/>
+    <fx:include source="layout_main_menu_front_images.fxml" translateY="540"/>
+    <Pane fx:id="snowPaneFront" translateY="600"/>
 
 </Pane>
