--- a/src/main/resources/views/layout_startup.fxml
+++ b/src/main/resources/views/layout_startup.fxml
@@ -8,15 +8,15 @@
       xmlns="http://javafx.com/javafx"
       fx:controller="client.ui.MainMenuControllers.StartupController"
       prefHeight="1080" prefWidth="3840"
-      fx:id="rootPane">
+      fx:id="rootPane" stylesheets="/css/defaultStyling.css">
 
     <Pane fx:id="allPanes">
         <fx:include source="layout_main_menu.fxml" fx:id="MainMenuPane" disable="false"/>
         <fx:include source="layout_preferences.fxml" fx:id="preferencesPane" layoutX="1920"/>
         <fx:include source="layout_lobby.fxml" fx:id="lobbyPane" layoutY="1080" layoutX="1020"/>
     </Pane>
-    <ImageView fitWidth="50" preserveRatio="true" layoutX="1860" layoutY="10" onMouseEntered="#widthUpImageView"
-               onMouseExited="#widthDownImageView" onMouseClicked="#quitGame">
+    <ImageView styleClass="imageButton" fitWidth="50" preserveRatio="true" layoutX="1860" layoutY="10"
+               onMouseClicked="#quitGame">
         <Image url="/images/exitButton.png"/>
     </ImageView>
 
@@ -26,13 +26,13 @@
                 disable="true"/>
 
 
-    <ImageView fitWidth="50" preserveRatio="true" layoutX="1860" layoutY="1090" onMouseEntered="#widthUpImageView"
-               onMouseExited="#widthDownImageView" onMouseClicked="#openOptionsVertical">
+    <ImageView styleClass="imageButton" fitWidth="50" preserveRatio="true" layoutX="1860" layoutY="1090"
+               onMouseClicked="#openOptionsVertical">
         <Image url="/images/OptionsButtonImage.png"/>
     </ImageView>
 
-    <ImageView fitWidth="50" preserveRatio="true" layoutX="1800" layoutY="1090" onMouseEntered="#widthUpImageView"
-               onMouseExited="#widthDownImageView" onMouseClicked="#openRulesVertical">
+    <ImageView styleClass="imageButton" fitWidth="50" preserveRatio="true" layoutX="1800" layoutY="1090"
+               onMouseClicked="#openRulesVertical">
         <Image url="/images/RulesButtonImage.png"/>
     </ImageView>
 </Pane>
