--- a/src/main/resources/views/layout_main_menu_play.fxml
+++ b/src/main/resources/views/layout_main_menu_play.fxml
@@ -12,7 +12,7 @@
     <ImageView fitWidth="550" preserveRatio="true">
         <Image url="/images/makeagame.png"/>
     </ImageView>
-    <Label fx:id="createLobby" text="Create Lobby" onMouseEntered="#hoverEnter" onMouseExited="#hoverExit"/>
-    <Label fx:id="joinLobby" text="Join Lobby" onMouseEntered="#hoverEnter" onMouseExited="#hoverExit"/>
+    <Label styleClass="fancy-label" fx:id="createLobby" text="Create Lobby"/>
+    <Label styleClass="fancy-label" fx:id="joinLobby" text="Join Lobby"/>
 
 </VBox>
