--- a/src/main/resources/views/layout_lobby.fxml
+++ b/src/main/resources/views/layout_lobby.fxml
@@ -11,8 +11,7 @@
         spacing="20" style="-fx-background-color: #DDD">
     <VBox fx:id="container" alignment="BASELINE_CENTER"/>
     <HBox prefWidth="1080" alignment="CENTER" spacing="10">
-        <Label fx:id="quitButtonLabel" text="Quit" onMouseEntered="#entered" onMouseExited="#exited"/>
-        <Label fx:id="startButtonLabel" text="Start" onMouseEntered="#entered" onMouseExited="#exited"
-               onMouseClicked="#onStartButtonClicked"/>
+        <Label styleClass="fancy-label" fx:id="quitButtonLabel" text="Quit"/>
+        <Label styleClass="fancy-label" fx:id="startButtonLabel" text="Start" onMouseClicked="#onStartButtonClicked"/>
     </HBox>
 </VBox>
