Routes omgeflikkerd Deleted Location, LocationStore Added RouteStore Added id and routeType to Route Added Enum RouteType Added RouteStore to GameStore Added the currently needed getters

--- a/src/main/resources/views/layout_full_game.fxml
+++ b/src/main/resources/views/layout_full_game.fxml
@@ -4,8 +4,11 @@
 <Pane xmlns:fx="http://javafx.com/fxml"
       xmlns="http://javafx.com/javafx"
       fx:controller="client.ui.FullGameController"
-      prefHeight="1080.0" prefWidth="1920.0"
-      fx:id="rootPane">
+      prefHeight="720" prefWidth="1280"
+      fx:id="rootPane" style="-fx-background-color: linear-gradient(to bottom, #bfe8f9 0%,#0082ED 70%);">
 
-    <fx:include source="layout_routes_map.fxml" fx:id="routesMap"/>
+    <fx:include source="layout_routes_map.fxml" fx:id="routesMap" scaleX="1.35" scaleY="1.35" layoutX="750"
+                layoutY="105"/>
+    <!--<fx:include source="layout_game_cards.fxml" fx:id="rootCards"/>-->
+    <fx:include source="layout_game_bank.fxml" fx:id="bank"/>
 </Pane>
