This might be the worst merge in the history of merges, maybe ever

--- a/src/main/resources/views/layout_game_cards.fxml
+++ b/src/main/resources/views/layout_game_cards.fxml
@@ -12,31 +12,31 @@
     <bottom>
         <HBox fx:id="HBox" spacing="-60" style="-fx-padding:0 0 0 -35">
             <ImageView fx:id="black" rotate="90" fitHeight="127">
-                <Image url="/cards/CART_BLACK.png"/>
+                <Image url="/cards/FALSE/CART_BLACK.png"/>
             </ImageView>
             <ImageView fx:id="blue" rotate="90">
-                <Image url="/cards/CART_BLUE.png"/>
+                <Image url="/cards/FALSE/CART_BLUE.png"/>
             </ImageView>
             <ImageView fx:id="green" rotate="90">
-                <Image url="/cards/CART_GREEN.png"/>
+                <Image url="/cards/FALSE/CART_GREEN.png"/>
             </ImageView>
             <ImageView fx:id="orange" rotate="90">
-                <Image url="/cards/CART_ORANGE.png"/>
+                <Image url="/cards/FALSE/CART_ORANGE.png"/>
             </ImageView>
             <ImageView fx:id="purple" rotate="90">
-                <Image url="/cards/CART_PURPLE.png"/>
+                <Image url="/cards/FALSE/CART_PURPLE.png"/>
             </ImageView>
             <ImageView fx:id="red" rotate="90">
-                <Image url="/cards/CART_RED.png"/>
+                <Image url="/cards/FALSE/CART_RED.png"/>
             </ImageView>
             <ImageView fx:id="white" rotate="90">
-                <Image url="/cards/CART_WHITE.png"/>
+                <Image url="/cards/FALSE/CART_WHITE.png"/>
             </ImageView>
             <ImageView fx:id="yellow" rotate="90">
-                <Image url="/cards/CART_YELLOW.png"/>
+                <Image url="/cards/FALSE/CART_YELLOW.png"/>
             </ImageView>
             <ImageView fx:id="locomotive" rotate="90">
-                <Image url="/cards/LOCOMOTIVE.png"/>
+                <Image url="/cards/FALSE/LOCOMOTIVE.png"/>
             </ImageView>
         </HBox>
     </bottom>
